WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305190
Fix sandbox extension file access failures on MacCatalyst caused by multiple entitlement lookups
https://bugs.webkit.org/show_bug.cgi?id=305190
Summary
Fix sandbox extension file access failures on MacCatalyst caused by multiple ...
Darryl
Reported
2026-01-09 04:21:57 PST
Fix sandbox extension file access failures on MacCatalyst caused by multiple entitlement lookups
Attachments
Add attachment
proposed patch, testcase, etc.
Darryl
Comment 1
2026-01-09 04:21:59 PST
<
rdar://problem/166738679
>
Darryl
Comment 2
2026-01-09 04:23:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56328
EWS
Comment 3
2026-01-12 22:07:31 PST
Committed
305495@main
(95dcfb0c569e): <
https://commits.webkit.org/305495@main
> Reviewed commits have been landed. Closing PR #56328 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug