Cherry-pick 95dcfb0c569e. rdar://168065702

Fix sandbox extension file access failures on MacCatalyst caused by multiple entitlement lookups
    https://bugs.webkit.org/show_bug.cgi?id=305190
    rdar://166738679

    Reviewed by Per Arne Vollan.

    WebContent processes on MacCatalyst were experiencing sandbox extension file
    access failures. Investigation suggests that inferring security mode from
    missing entitlements required multiple lookups, contributing to a race
    condition.

    This patch switches to explicit entitlement-based detection for internal SDK
    builds, reducing the number of entitlement lookups required to determine the
    security mode.

    * Source/WebKit/Scripts/compile-sandbox.sh:
    * Source/WebKit/Scripts/process-entitlements.sh:
    * Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
    (WebKit::WebProcess::accessibilityFocusedUIElement):
    * Source/WebKit/WebProcess/com.apple.WebProcess.sb.in:

    Canonical link: https://commits.webkit.org/305495@main

Identifier: 305413.10@safari-7624-branch